cros: Use "regular" extension session type for child users

Test failures in http://crbug.com/657180 reveal a problem of
what session type to use for users changing the child status
from the extension feature's perspective. This is a valid case
as the child status of a user could change when the user's
Gaia account is updated. Since child users are allowed to use
extensions as regular users, use "regular" extension session
type for them too.

Also re-enable the tests.

BUG=657180

Review-Url: https://chromiumcodereview.appspot.com/2433873005
Cr-Commit-Position: refs/heads/master@{#426284}

Former-commit-id: 4b2c7bf96730778554c4978e8103545965bdec22